# conversia-project

./: README.md  context.txt  docker-compose.yml  full-deployment.yaml  update-kube.sh
.github/workflows/: deploy.yml  load-test.yml
backend/: Dockerfile  README.md  load-test.yml  package.json  upload.sh
backend/src/: app.controller.spec.ts  app.module.ts  app.service.ts  main.ts
backend/src/auth/: auth-socket.guard.ts  auth.controller.ts  auth.guard.ts  auth.module.ts  auth.service.ts  auth.strategy.ts
backend/src/chat/: chat-message-mongo.repository.ts  chat.gateway.ts  chat.module.ts  chat.service.ts
backend/src/common/: constants.ts  utils.ts
backend/src/shared/: generic-mongo-repository.service.ts  generic-repository.ts  generic-service.ts  rate-limiter.guard.ts  shared.module.ts
backend/src/user/: user-mongo.repository.ts  user.controller.ts  user.module.ts  user.repository.ts  user.service.ts
frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  socket.js  socket1.js  socket2.js  upload.sh
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/atoms/: auth-user.atom.ts  chat-messages.atom.ts  socket.atom.ts  user-room.atom.ts
frontend/components/: auth-provider.tsx
frontend/hooks/: useSocket.ts  useStorage.ts
frontend/interfaces/: messages.ts  online-users.interface.ts  users.ts
frontend/lib/: api.ts  storage.ts
frontend/providers/: recoil-context-provider.tsx  socket-context.provider.tsx
frontend/shared/: constants.ts
ws-rs/: Cargo.toml  Makefile
ws-rs/src/: main.rs
(+30 files in other folders)
