[package]
name = "ws-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["actix-tls"] }
actix-rt = "2.10.0"
actix = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
actix-web-actors = "4.3.0"